[gd_scene load_steps=24 format=3 uid="uid://cfjpihetclg2c"]

[ext_resource type="PackedScene" uid="uid://x8q617q250qp" path="res://src/main/component/projectile_base.tscn" id="1_xjcfl"]
[ext_resource type="Script" path="res://src/main/scene/role/standard_weapons/weapon_17/thunder_magic_bullet.gd" id="2_yaqwl"]
[ext_resource type="Texture2D" uid="uid://drv8ix16p1jnd" path="res://assets/MyVFX/ThunderVFX/spark_02/Spritesheet.png" id="3_hk0tf"]
[ext_resource type="Texture2D" uid="uid://du8cwccbqle1w" path="res://assets/MyVFX/ThunderVFX/thunder_08/lightning_bolt.png" id="3_xb1le"]

[sub_resource type="Curve" id="Curve_p3but"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_dt5ub"]
atlas = ExtResource("3_hk0tf")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_glqri"]
atlas = ExtResource("3_hk0tf")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ripw2"]
atlas = ExtResource("3_hk0tf")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_q32oh"]
atlas = ExtResource("3_hk0tf")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_jin0v"]
atlas = ExtResource("3_hk0tf")
region = Rect2(160, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfjxr"]
atlas = ExtResource("3_hk0tf")
region = Rect2(200, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_squdi"]
atlas = ExtResource("3_hk0tf")
region = Rect2(240, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_li3sk"]
atlas = ExtResource("3_hk0tf")
region = Rect2(280, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_haqtk"]
atlas = ExtResource("3_hk0tf")
region = Rect2(320, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypev3"]
atlas = ExtResource("3_hk0tf")
region = Rect2(360, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fhuy"]
atlas = ExtResource("3_hk0tf")
region = Rect2(400, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_87jdr"]
atlas = ExtResource("3_hk0tf")
region = Rect2(440, 0, 40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_bigou"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt5ub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glqri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ripw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q32oh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jin0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfjxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_squdi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_li3sk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_haqtk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypev3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fhuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87jdr")
}],
"loop": true,
"name": &"idle",
"speed": 20.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_44bq2"]
radius = 13.0
height = 40.0

[sub_resource type="Animation" id="Animation_lq700"]
resource_name = "finish"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explode:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/HitBox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Explode:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"scale_down"
}]
}

[sub_resource type="Animation" id="Animation_n0k7s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/HitBox:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explode:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Explode:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vleld"]
_data = {
"RESET": SubResource("Animation_n0k7s"),
"finish": SubResource("Animation_lq700")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_t2bcx"]
radius = 60.0

[node name="ThunderMagicBullet" instance=ExtResource("1_xjcfl")]
script = ExtResource("2_yaqwl")
max_attration_speed = 100.0
max_attraction_acceleration = 3000.0
attraction_acceleration_curve = SubResource("Curve_p3but")

[node name="Explode" type="Sprite2D" parent="." index="1"]
visible = false
position = Vector2(0, -21)
texture = ExtResource("3_xb1le")
hframes = 13

[node name="Sprite2D" parent="Graphics" index="0"]
hframes = 12

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Graphics" index="1"]
sprite_frames = SubResource("SpriteFrames_bigou")
animation = &"idle"
frame = 1
frame_progress = 0.756276

[node name="HitBox" parent="Graphics" index="2"]
monitoring = false

[node name="CollisionShape2D" parent="Graphics/HitBox" index="0"]
position = Vector2(0, -2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_44bq2")

[node name="AnimationPlayer" parent="." index="4"]
libraries = {
"": SubResource("AnimationLibrary_vleld")
}

[node name="TractionArea2D" type="Area2D" parent="." index="6"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TractionArea2D" index="0"]
shape = SubResource("CircleShape2D_t2bcx")

[connection signal="body_entered" from="TractionArea2D" to="." method="_on_traction_area_2d_body_entered"]
[connection signal="body_exited" from="TractionArea2D" to="." method="_on_traction_area_2d_body_exited"]
